Revision history for {{$dist->name}}

{{$NEXT}}

0.027     2018-01-02 00:52:31+08:00 Asia/Kuala_Lumpur
    New features:

    - ->hexdump, mainly intended for debugging protocol handling
    - ->map_from_source, allowing control over what is emitted (and
    when) compared to ->map

0.026     2017-12-28 01:11:07+08:00 Asia/Kuala_Lumpur
    No new features.

    Internal changes:

    - Clean up duplicated code which is now available in upstream Future.pm 0.37
    

0.025     2017-10-22 17:06:29+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - Minor update to Ryu::Observable to fix a typo in a method call

0.024     2017-09-01 20:50:54+08:00 Asia/Kuala_Lumpur
    New features:

    - Ryu::Sink API updated in preparation for Ryu::Async release (might
    even gain some documentation in the next release)

0.023     2017-07-29 22:25:42+08:00 Asia/Kuala_Lumpur
    New features:

    - ->map with a string parameter will use that as a hashref key lookup
    on plain hashref items

0.022     2017-07-09 14:33:16+08:00 Asia/Kuala_Lumpur
    New features:

    - Basic CSV encoder/decoder support - does not handle embedded newlines

0.021     2017-06-26 02:04:15+08:00 Asia/Kuala_Lumpur
    No new features.

    Documentation:

    - Tidy up method ordering in Ryu::Source
    - More examples

0.020     2017-06-17 01:39:34+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ->encode and ->decode finish when upstream has no more data

0.019     2017-06-17 01:33:18+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ->sprintf_methods now defaults undef values, to avoid warnings. It
    also gains some documentation in the process.


0.018     2017-06-11 03:38:39+08:00 Asia/Kuala_Lumpur
    New features:

    - ->filter_isa - filter by object classes

0.017     2017-05-31 23:14:01+08:00 Asia/Kuala_Lumpur
    No new features.

    Documentation:

    - bring much-needed clarity to the documentation for Ryu::Observable.
